<resources>
    <string name="app_name">Dokobit</string>
    <string name="name">Name</string>
    <string name="name_gmail_com">Name@gmail.com</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_documents">Documents</string>
    <string name="nav_upload">Upload document</string>
    <string name="nav_validate">Validate document</string>
    <string name="nav_setting">Profile settings</string>
    <string name="nav_help">Help &amp; feedback</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_account">Account</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="empty_state_title">No documents found</string>
    <string name="empty_state_subtitle">Try adjusting your search or filter to find what you looking for</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log in</string>
    <string name="personal_code">Personal code</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="set_document_options">Set document options</string>
    <string name="sync_title">Require qualified electronic signatures</string>
    <string name="signing_deadline">Signing deadline</string>
    <string name="decrition">Fixed position of annotations is only available for PDF signing</string>
    <string name="document_name">Document name</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="billing_fragment">Billing Fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="personal_details">Personal details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_name">Company Name</string>
    <string name="registration_code">Registration Code</string>
    <string name="phone">Phone</string>
    <string name="position">Position</string>
    <string name="email_notification">Email Notification</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="change">Change</string>
    <string name="Yourmobile">Your mobile devices</string>
    <string name="newsletters">Newsletters</string>
    <string name="add_item">Add item</string>
    <string name="email">Email</string>
    <string name="Notification">Notification</string>
    <string name="notify">Notify me when...</string>
    <string name="mobile">Mobile</string>
    <string name="account">Account aliases</string>
    <string name="delete_account">Delete account</string>
    <string name="dialog_add_alias_title">To keep your personal and company documents separate, we recommend not adding your personal email address as an alias to your company account.</string>
    <string name="upgrade_plan">Upgrade plan</string>
    <string name="billing_details">Billing Details</string>
    <string name="edit">Edit</string>
    <string name="monthly">Monthly</string>
    <string name="show_all_features">Show all features</string>
    <string name="text1">When sharing a document to collect signatures from others, document owner is paying for all the collected signatures. If your shared document is signed by 3 people in total, you will have used 3 signatures. This is applicable for paid plan users only.</string>
    <string name="radiotext">Baseline validation: checks that the document hasn\'t been altered and provides necessary information about legal type and validity of electronic signatures and seals according to EU Regulation No 910/2014 (elDAS).</string>
    <string name="radiotext1">Stricter validation: requires qualified electronic signatures and seals to pass. Qualified electronic signatures have equivalent legal effect of handwritten signatures according to EU Regulation No 910/2014 (elDAS).</string>
</resources>