<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ProfileFragment"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
        <TextView
            android:id="@+id/personal_details"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textSize="24sp"
            android:textColor="@color/black"
            />

            <Button
                android:gravity="center"
                android:layout_width="96dp"
                android:layout_height="@dimen/dimen_24"
                android:layout_centerVertical="true"
                android:layout_alignBottom="@id/personal_details"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_8"
                android:background="@drawable/btn_change"
                android:layout_toEndOf="@+id/personal_details"
                android:textSize="12sp"
                android:text="@string/change"
                android:textColor="@color/black"
                android:drawableStart="@drawable/pencil"
                android:paddingStart="@dimen/dimen_16"
                android:textAllCaps="false"
                android:paddingEnd="@dimen/dimen_16" />
        </RelativeLayout>
        <TextView
            android:text="@string/first_name"
            android:id="@+id/nameLabel"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/first_name"
            android:padding="16dp"
            android:layout_marginStart="@dimen/dimen_24"
            android:background="@null"
            android:textColor="@color/black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/nameLabel"
            android:importantForAccessibility="no"
            tools:ignore="Autofill" />

        <TextView
            android:text="@string/last_name"
            android:id="@+id/nameLabel1"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:textColor="@color/black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/last_name"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/dimen_24"
            android:textColor="@color/black"
            android:background="@null"
            android:labelFor="@id/nameLabel1"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"/>

        <TextView
            android:text="@string/personal_code"
            android:id="@+id/nameLabel2"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:textColor="@color/black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/personal_code"
            android:padding="16dp"
            android:layout_marginStart="@dimen/dimen_24"
            android:background="@null"
            android:textColor="@color/black"

            android:importantForAccessibility="no"
            android:labelFor="@id/nameLabel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/company_name"
            android:id="@+id/nameLabel3"
            android:textColor="@color/black"

            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/company_name"
            android:padding="16dp"
            android:background="@null"
            android:textColor="@color/black"

            android:layout_marginStart="@dimen/dimen_24"
            android:importantForAccessibility="no"
            android:labelFor="@id/nameLabel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="Email"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:id="@+id/nameLabel4"
            android:textColor="@color/black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/email"
            android:padding="16dp"
            android:background="@null"
            android:layout_marginStart="@dimen/dimen_24"
            android:textColor="@color/black"

            android:importantForAccessibility="no"
            android:labelFor="@id/nameLabel4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/registration_code"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:id="@+id/nameLabel5"
            android:background="@null"
            android:textColor="@color/black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/registration_code"
            android:padding="16dp"
            android:layout_marginStart="@dimen/dimen_24"
            android:background="@null"
            android:labelFor="@id/nameLabel5"
            android:textColor="@color/black"

            android:importantForAccessibility="no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/phone"
            android:id="@+id/nameLabel6"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:textColor="@color/black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/phone"
            android:importantForAccessibility="no"
            android:layout_marginStart="@dimen/dimen_24"
            android:padding="16dp"
            android:background="@null"
            android:labelFor="@id/nameLabel6"
            android:textColor="@color/black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/position"
            android:id="@+id/nameLabel7"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:textColor="@color/black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/position"
            android:importantForAccessibility="no"
            android:padding="16dp"
            android:background="@null"
            android:layout_marginStart="@dimen/dimen_24"
            android:labelFor="@id/nameLabel7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/email_notification"
            android:id="@+id/nameLabel8"
            android:layout_marginTop="@dimen/dimen_32"
            android:textColor="@color/black"

            android:layout_marginStart="@dimen/dimen_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/notification"
            android:importantForAccessibility="no"
            android:padding="16dp"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_width="match_parent"
            android:labelFor="@id/nameLabel8"
            android:background="@null"
            android:layout_height="wrap_content"/>


        <TextView
            android:text="@string/city"
            android:id="@+id/nameLabel9"
            android:textColor="@color/black"

            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/city"
            android:background="@null"
            android:labelFor="@id/nameLabel9"
            android:layout_marginStart="@dimen/dimen_24"
            android:textColor="@color/black"

            android:padding="16dp"
            android:importantForAccessibility="no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/country"
            android:id="@+id/nameLabel10"
            android:layout_marginTop="@dimen/dimen_32"
            android:textColor="@color/black"

            android:layout_marginStart="@dimen/dimen_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/country"
            android:textColor="@color/black"

            android:padding="16dp"
            android:layout_marginStart="@dimen/dimen_24"
            android:background="@null"
            android:labelFor="@id/nameLabel10"
            android:importantForAccessibility="no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@drawable/line_horizontal"
            android:alpha="0.5"/>

        <TextView
            android:id="@+id/yourmobile"
            android:textColor="@color/black"

            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_height="wrap_content"
            android:text="@string/Yourmobile"
            android:textSize="24sp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@drawable/line_horizontal"
            android:alpha="0.5"/>

        <TextView
            android:id="@+id/newsletters"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_height="wrap_content"
            android:textColor="@color/black"

            android:text="@string/newsletters"
            android:textSize="24sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_16"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"

                android:layout_weight="1"
                android:text="@string/newsletters"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"

                android:text="@string/email"/>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@drawable/line_horizontal"
            android:alpha="0.5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dimen_24"
        android:layout_marginEnd="@dimen/dimen_16"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"

            android:text="I want to receive occasional news and offers from Dokobit"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@drawable/thumb"
            android:layout_gravity="center_vertical"
            app:trackTint="@drawable/track"
            app:thumbStrokeColor="@color/my_checked_color"
            app:thumbStrokeWidth="2dp"/>
    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_height="wrap_content"
            android:text="@string/Notification"
            android:textSize="24sp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_16"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"


                android:layout_weight="1"
                android:text="@string/notify"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/dimen_4"
                android:text="@string/mobile"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/dimen_4"
                android:text="@string/email"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@drawable/line_horizontal"
            android:alpha="0.5"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="24sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_height="wrap_content"
            android:text="You can use multiple email addresses to receive documents to this Dokobit account."
            android:textSize="12sp"
            android:textColor="@color/grey2"
            />
        <Button
            android:id="@+id/btn_add_alias"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_24"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_12"
            android:background="@drawable/btn_button"
            android:textSize="12sp"
            android:text="Add an alias"
            android:textColor="@color/colorPrimary"
            android:drawableStart="@drawable/baseline_add_24"
            android:textAllCaps="false"
            android:gravity="center"
             />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_32">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_24"
                android:textSize="12sp"
                android:text="@string/delete_account"
                android:textAllCaps="false"
                android:background="@drawable/btn_button"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                />
        </RelativeLayout>



    </LinearLayout>



</androidx.core.widget.NestedScrollView>